--- a/conf/test_sencha.config
+++ b/conf/test_sencha.config
@@ -15,8 +15,17 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"  
+  readPaths = [
+  ["10x_mouse_lung_ptprc",
+    ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/10x_mouse_lung_ptprc_locus.fastq']],
+  ["human_liver_ptprc",
+      ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/human_liver_ptprc.fastq']],
+  ["orangutan_brain_ptprc",
+      ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/orangutan_brain_ptprc.fastq']],
+  ["bonobo_liver_ptprc",
+      ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/bonobo_liver_ptprc.fastq']]]
   single_end = true
+
   proteome_translate_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
   translate_peptide_molecule = 'dayhoff,protein'
   translate_peptide_ksize = '9,12'
