--- a/.github/workflows/branch_czbiohub.yml
+++ b/.github/workflows/branch_czbiohub.yml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 
 jobs:
-  test:
+  branch:
     runs-on: ubuntu-latest
     steps:
       # PRs to the nf-core repo master branch are only ok if coming from the nf-core repo `dev` or any `patch` branches
