--- a/nextflow.config
+++ b/nextflow.config
@@ -63,9 +63,9 @@ params {
   diamond_database = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
   // e.g. "complete", "archaea", "plasmid", "protozoa", "viral"
-  diamond_refseq_release = 'vertebrate_mammalian'
-  diamond_taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
-  diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
+  refseq_release = 'vertebrate_mammalian'
+  taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
+  taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
   // --- Noncoding RNA search parameters -- //
   search_noncoding = false
