--- a/conf/test_sambamba.config
+++ b/conf/test_sambamba.config
@@ -15,14 +15,12 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"  
+  bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"
   single_end = true
   proteome_translate_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
   translate_peptide_molecule = 'dayhoff'
   translate_peptide_ksize = '9'
   skip_remove_duplicates_bam = false
-  proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
-  diamond_refseq_release = false
-  diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
 
+  diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only_db.dmnd'
 }
