--- a/conf/test_diff_hash.config
+++ b/conf/test_diff_hash.config
@@ -18,6 +18,7 @@ params {
   csv = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/diff-hash/samples3.csv'
   sourmash_molecule = 'dayhoff'
   sourmash_ksize = 45
+  sourmash_scaled = 5
   input_is_protein = true
 
   // Differential hash expression options
