--- a/conf/test_diff_hash_sourmash.config
+++ b/conf/test_diff_hash_sourmash.config
@@ -18,14 +18,16 @@ params {
   csv = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/diff-hash/samples3.csv'
   sourmash_molecule = 'dayhoff'
   sourmash_ksize = 45
+  // Very small for testing -- realistic data should be around 5, 10
+  sourmash_scaled = 1
 
   input_is_protein = true
 
   // Differential hash expression options
   diff_hash_expression = true
-  diff_hash_inverse_regularization_strength = 0.5  // Use larger number for testing, for less regularization on this small dataset
+  diff_hash_inverse_regularization_strength = 1  // Use larger number for testing, for less regularization on this small dataset
   diff_hash_solver = 'liblinear'  // Use simpler model for testing
-  diff_hash_penalty = 'l1'
+  diff_hash_penalty = 'l2'
 
   input_is_protein = true
   protein_searcher = 'sourmash'
