--- a/nextflow.config
+++ b/nextflow.config
@@ -57,6 +57,7 @@ params {
   sourmash_ksize = false
   sourmash_molecule = false
   sourmash_log2_sketch_size = false
+  sourmash_scaled = false
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
