--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
       NXF_RUN: "nextflow run -resume"
     runs-on: ubuntu-latest
     strategy:
+      # Do ALL the tests even if one of them fails
+      fail-fast: false
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['19.10.0', '']
