--- a/conf/test_hash2kmer.config
+++ b/conf/test_hash2kmer.config
@@ -21,8 +21,5 @@ params {
   sourmash_ksize = 45
   input_is_protein = true
 
-  proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
-  diamond_refseq_release = false
-  diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
-
+  diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only_db.dmnd'
 }
