--- a/conf/test_download_refseq.config
+++ b/conf/test_download_refseq.config
@@ -33,6 +33,6 @@ params {
   // Protein fasta is 453 B
   refseq_release = 'other'
 
-  diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
+  taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
 
 }
