--- a/conf/test_diff_hash.config
+++ b/conf/test_diff_hash.config
@@ -23,10 +23,11 @@ params {
 
   // Differential hash expression options
   diff_hash_expression = true
-  diff_hash_inverse_regularization_strength = 0.5  // Use larger number for testing, for less regularization on this small dataset
+  diff_hash_inverse_regularization_strength = 1  // Use larger number for testing, for less regularization on this small dataset
   diff_hash_solver = 'liblinear'  // Use simpler model for testing
-  diff_hash_penalty = 'l1'
+  diff_hash_penalty = 'l2'
 
-  // Use pre-made diamond database to save time
-  diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only_db.dmnd'
+  input_is_protein = true
+  protein_searcher = 'sourmash'
+  proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
 }
