--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,6 @@ jobs:
         nxf_ver: ['19.10.0', '']
         profile_flags: [
         'test_bam',
-        'test_sambamba',
         'test_bam --search_noncoding',
         'test_diff_hash',
         'test_diff_hash --with_abundance',
@@ -28,9 +27,11 @@ jobs:
         'test_fastq_paired',
         'test_hash2kmer',
         'test_input_is_protein',
-        'test_sourmash_search',
+        'test_sambamba',
         'test_sencha',
         'test_sencha_sambamba'
+        'test_sourmash_search',
+        'test_sourmash_makedb',
         ]
     steps:
       - uses: actions/checkout@v2
