--- a/environment.yml
+++ b/environment.yml
@@ -14,17 +14,14 @@ dependencies:
   - bioconda::bedtools=2.29.2
   - bioconda::fastqc=0.11.8
   - bioconda::multiqc=1.8
-  - conda-forge::r-markdown=1.1
-  - conda-forge::r-base=3.6.1
   - bioconda::samtools=1.10
   - bioconda::sambamba=0.7.1
   - bioconda::diamond=0.9.35
   - bioconda::fastp=0.20.0
   - bioconda::bedtools=2.29.2
   - pip=20.0.2
-  - conda-forge::rust=1.41.0    # Required for building sourmash from source
   - conda-forge::scikit-learn=0.22.1
-  - bioconda::sourmash=3.3.0
+  - conda-forge::sourmash=3.4.1
   - conda-forge::pandas=1.0.3
   - conda-forge::tqdm=4.45.0
   - thombashi::pathvalidate=2.2.0
