--- a/nextflow.config
+++ b/nextflow.config
@@ -36,6 +36,7 @@ params {
   diff_hash_inverse_regularization_strength = 0.1  // Small numbers for fewer features
   diff_hash_solver = 'saga'  // Saga solver is fast for large datasets
   diff_hash_penalty = 'l1'   // Use strong penalty for large datasets
+  diff_hash_min_cells = 3  // Minimum number of cells expressing each hash
 
   translate_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
